--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
 # dependencies
-*/node_modules
-/.pnp
+node_modules
+.pnp
 .pnp.js
 
 # testing
-/coverage
+coverage
 
 # production
-*/build
+build
 .vercel*
 
 # misc
@@ -18,3 +18,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# config
+transport-config.js
+**/corpora/*.json
+model.nlp
