--- a/client/.env.example
+++ b/client/.env.example
@@ -1,1 +1,2 @@
 REACT_APP_API_URL="Your API url here! like -> http://127.0.0.1:5500"
+REACT_APP_CLIENT_URL="Your Client url here! like -> http://127.0.0.1:3000"
