Add subscription feature

--- a/server/.env.example
+++ b/server/.env.example
@@ -1,3 +1,11 @@
 PORT=5500
 DATABASE_URI="url of your mongo db"
 SECRET_KEY="your own secret key to encrypt token"
+DEV=true
+
+# Stripe
+STRIPE_SECRET_KEY="your stripe secret key"
+STANDARD_PLAN="standard plan api id starts with 'price_'"
+PREMIUM_PLAN="premium plan api id starts with 'price_'"
+STRIPE_LOCAL_ENDPOINT_SECRET="local webhook secret"
+STRIPE_HOSTED_ENDPOINT_SECRET="hosted webhook secret"
