--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
         "mongoose": "^6.10.0",
         "node-nlp": "^4.26.1",
         "nodemailer": "^6.9.1",
-        "nodemon": "^2.0.20"
+        "nodemon": "^2.0.20",
+        "stripe": "^11.15.0"
     }
 }
